refactor: 修正文件上传下载接口
